@@ -317,7 +317,7 @@ static void _display_archive(struct cmd_context *cmd, struct archive_file *af)
 	 */
 	/* FIXME Use variation on _vg_read */
 	if (!(vg = text_vg_import_file(tf, af->path, &when, &desc))) {
-		log_print("Unable to read archive file.");
+		log_error("Unable to read archive file.");
 		tf->fmt->ops->destroy_instance(tf);
 		return;
 	}
